# Typja

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  SYNTAX.md
examples/fastapi/: app.py  typja.toml
examples/fastapi/models/: user.py
examples/fastapi/templates/: base.html  profile.html  users_list.html
scripts/: release.sh
src/typja/: __init__.py  __main__.py  analyzer.py  constants.py  exceptions.py  helpers.py  linter.py  registry.py  reporter.py  resolver.py
src/typja/cli/: app.py  check.py  init.py  watch.py
src/typja/config/: __init__.py  defaults.py  loader.py  schema.py
src/typja/parser/: __init__.py  ast.py  comment.py  imports.py  type.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_helpers.py  test_linter.py  test_parser.py  test_registry.py  test_reporter.py  test_resolver.py
tests/data/configs/: basic_config.toml  full_config.toml  invalid_syntax.toml  invalid_types.toml  minimal_config.toml
tests/data/templates/invalid/: invalid_from_import.html  invalid_import.html  malformed_callable.html  malformed_union.html  missing_colon.html
tests/data/templates/valid/: callable_type.html  filter_declaration.html  generic_types.html  ignore_directive.html  macro_declaration.html  multiline_comment.html  multiple_vars_single_comment.html  qualified_types.html  simple_vars.html  union_types.html  with_imports.html
tests/data/types/: classes_types.py  dataclasses_types.py  enum_types.py  old_classes_types.py  other_user.py  pydantic_types.py  typeddict_types.py  user.py
tests/data/types/subdir/: nested.py
