[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "typja"
version = "0.1.1"
description = "Type checker for your Jinja2 templates"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Daniel Brai", email = "danielbrai.dev@gmail.com" }
]
keywords = ["jinja2", "type checking", "static analysis"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "Natural Language :: English",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",

    "Topic :: Utilities",

    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.23.0",
    "tomli==2.4.0; python_version<'3.11'",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

test = [
    "pydantic>=2.12.5",
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
typja = "typja:main"


[project.urls]
Homepage = "https://github.com/Daniel-Brai/Typja"
Repository = "https://github.com/Daniel-Brai/Typja"
Source = "https://github.com/Daniel-Brai/Typja"
Issues = "https://github.com/Daniel-Brai/Typja/issues"


[tool.uv]
package = true

[tool.bandit]
severity_level = "HIGH"
confidence_level = "HIGH"
exclude_dirs = ["tests", "venv", ".venv", "build", "dist", "__pycache__", "examples"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unused_configs = true
check_untyped_defs = true
implicit_optional = true
exclude = ["^./build/.*$", "^./.venv/.*$", "^.*/tests/.*$", "^./examples/.*$"]


[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "C416", # Allow use of list comprehensions
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["./tests/"]
python_files = ["test_*.py"]
